# SignalForge

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  Makefile  README.md  alembic.ini  answer_generator.py  answer_query.py  api.py  compose.yaml  cross_reference.py  evaluate_answers.py  evaluate_planner.py  evaluate_retrieval.py  ingest.py  ingest_test.py  ingestion.py  main.py  plan_query.py  pyproject.toml  query_planner.py  rag_service.py  search.py  sections.py  sql_test.py  storage.py  test.py  vector_store.py  vectorize.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_research_sessions_query_runs.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/docker-entrypoint.d/: 40-runtime-config.sh
frontend/public/: runtime-config.js
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
prompts/: PLANNER_CHANGELOG.md
signalforge/: answer_generator.py  api.py  config.py  cross_reference.py  index_health.py  ingestion.py  migrations.py  models.py  parser.py  query_planner.py  rag_service.py  sections.py  source_discovery.py  source_ingestion.py  sqlite_to_postgres.py  storage.py  vector_store.py  vectorization.py  worker.py
signalforge/cli/: add_source.py  answer_query.py  approve_source.py  discover_sources.py  (+14 more)
tests/: conftest.py  test_answer_generator.py  test_answer_query_cli.py  test_api.py  test_config.py  test_embedding_status.py  test_generic_data_model.py  test_index_health.py  test_ingestion.py  test_migrations.py  test_parser.py  test_planner_evaluator.py  test_postgres_storage.py  test_query_planner.py  test_rag_service.py  test_retrieval.py  test_retrieval_evaluator.py  test_sections.py  test_source_discovery.py  test_source_ingestion.py  test_source_management.py  test_sqlite_to_postgres.py  test_vector_store.py  test_worker.py
(+8 files in other folders)
