[project]
name = "signalforge"
version = "0.1.0"
description = "Market intelligence pipeline for scraping and analyzing SEC EDGAR 10-K filings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
        "beautifulsoup4>=4.12.3",
        "httpx>=0.27.2",
        "lxml>=5.3.0",
        "pandas>=2.2.3",
        "pyarrow>=18.0.0",
        "python-dotenv>=1.0.1",
        "qdrant-client[fastembed]>=1.14.2",
        "sec-edgar-downloader>=5.0.3",
        "tenacity>=9.0.0",
        "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
